tests/baselines/reference/parser_continueNotInIterationStatement4.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement4.ts(4,5): error TS1107: Jump target cannot cross function boundary.


==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement4.ts (1 errors) ====
    TWO:
    while (true){
      var x = () => {
        continue TWO;
        ~~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }
    